--- a/wercker.yml
+++ b/wercker.yml
@@ -11,4 +11,12 @@ build:
         packages: maven
     - script:
         name: maven build
-        code: mvn clean assembly:assembly
+       code: mvn clean assembly:assembly
+#Push the docker image with our built and tested application to the Oracle Container Registry
+push-release:
+  steps:
+    - internal/docker-push:
+        tag: $WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
+        working-dir: /pipeline/source
+        ports: $PORT
+        cmd: sh target/bin/start
