--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,7 @@
 box:
   id: openjdk
   ports:
-    - $PORT
+    - 8080
 
 #Build our application using Maven, just as we always have
 build:
@@ -12,12 +12,12 @@ build:
     - script:
         name: maven build
         code: mvn clean assembly:assembly
-       
+
 #Push the docker image with our built and tested application to the Oracle Container Registry
 push-release:
   steps:
     - internal/docker-push:
         tag: $WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
         working-dir: /pipeline/source
-        ports: $PORT
+        ports: 8080
         cmd: sh target/bin/start
